[Step3] 쓰기와 지연 실행 그리고 변경감지 (#21)
* feat: step2 조회와 Identity 보장

* fix: add PersistenceContext TestCode

* refactor: reorganize package structure and implement EntityMetaQuery for dynamic SQL generation

* feat: implements flush method

* feat: implement update functionality and dirty entity tracking in PersistenceContext

* refactor: simplify EntityMetaQuery and PersistenceContext by utilizing EntityMetadata

* feat: INSERT, UPDATE, DELETE 순서보장

* [Step2] 조회와 Identity 보장 (#2)

* feat: step2 조회와 Identity 보장

* fix: add PersistenceContext TestCode

* refactor: reorganize package structure and implement EntityMetaQuery for dynamic SQL generation

---------

Co-authored-by: jeonggyu <len@woowahan.com>

---------

Co-authored-by: jeonggyu <len@woowahan.com>